crates/px4-workqueue/tests/trybuild/fail/non_unit_return.stderr
error: #[task] async fn must return () or !
 --> tests/trybuild/fail/non_unit_return.rs:6:27
  |
6 | async fn returns_int() -> u32 {
  |                           ^^^
